Menú hamburguesa adaptado a todas las pantallas y se agregaron iconos de redes sociales

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                 <span>+56 9 3107 7232</span>
               </div>
             </div>
+
+              <!-- Red social -->
+  <div class="social-section mt-3">
+    <h5 class="contact-title">Síguenos en redes</h5>
+    <div class="social-icons d-flex gap-3 mt-2">
+      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>
+    </div>
+  </div>
+
           </li>
         </ul>
   
@@ -535,7 +545,7 @@
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="video-tab" data-bs-toggle="tab" data-bs-target="#video" type="button" role="tab" aria-controls="video" aria-selected="false">
-            <h4>Producción</h4>
+            <h4>Producción audiovisual</h4>
           </button>
         </li>
       </ul>
