actualización seccion desarrollo web

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <h3>Diseño y desarrollo web</h3>
                 <h5>Sitios que representan tu marca</h5>
                 <p>Diseñamos y desarrollamos sitios web personalizados, responsivos y optimizados: desde sitios informativos hasta plataformas con aplicaciones y e-commerce.</p>
-                <a href="service-details.html" class="read-more">Saber más <i class="bi bi-arrow-right"></i></a>
+                <a href="desarrollo-web.html" class="read-more">Saber más <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -481,7 +481,7 @@
                 <h3>Posicionamiento SEO</h3>
                 <h5>Haz que te encuentren primero</h5>
                 <p>Mejoramos tu presencia en buscadores con estrategias SEO efectivas para atraer tráfico de calidad y convertir visitas en resultados.</p>
-                <a href="service-details.html" class="read-more">Saber más <i class="bi bi-arrow-right"></i></a>
+                <a href="posicionamiento-seo.html" class="read-more">Saber más <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -495,7 +495,7 @@
                 <h3>Diseño gráfico</h3>
                 <h5>Identidad visual que conecta</h5>
                 <p>Creamos logotipos, branding completo y piezas gráficas que reflejan el valor y la personalidad de tu negocio.</p>
-                <a href="service-details.html" class="read-more">Saber más <i class="bi bi-arrow-right"></i></a>
+                <a href="diseño-grafico.html" class="read-more">Saber más <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -509,7 +509,7 @@
                 <h3>Producción Audiovisual</h3>
                 <h5>Videos profesionales con impacto</h5>
                 <p>Contamos con un equipo audiovisual para crear contenido visual potente: institucional, promocional o para redes sociales.</p>
-                <a href="service-details.html" class="read-more">Saber más<i class="bi bi-arrow-right"></i></a>
+                <a href="produccion-audiovisual.html" class="read-more">Saber más<i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -929,7 +929,7 @@
                   <div class="col-lg-8 mx-auto text-center">
                     <h2 class="display-4 mb-4">Agenda una reunión para conocer más acerca de tu proyecto.</h2>
                     <p class="mb-4">Puedes cotizar y asesorarte de manera gratuita con nosotros</p>
-                    <a href="#" class="btn btn-cta">Agendar reunión</a>
+                    <a href="#contact" class="btn btn-cta">Agendar reunión</a>
                   </div>
         
                   <!-- Abstract Background Elements -->
