--- a/desarrollo-web.html
+++ b/desarrollo-web.html
@@ -112,20 +112,26 @@
 <section id="service-details" class="service-details section">
   <div class="container">
     <div class="row gy-5">
-
       <!-- Tabs móviles (scroll horizontal) -->
-      <div class="d-lg-none mb-3 overflow-auto" data-aos="fade-up" data-aos-delay="50">
-        <div class="nav nav-pills flex-nowrap" id="mobile-tabs" role="tablist" style="white-space: nowrap; gap: 10px;">
-          <a class="nav-link active" data-bs-toggle="pill" href="#incluido" role="tab">¿Qué incluyen nuestros sitios webs?</a>
-          <a class="nav-link" data-bs-toggle="pill" href="#corporativos" role="tab">Corporativos</a>
-          <a class="nav-link" data-bs-toggle="pill" href="#landing" role="tab">Landing</a>
-          <a class="nav-link" data-bs-toggle="pill" href="#portafolio" role="tab">Portafolios</a>
-          <a class="nav-link" data-bs-toggle="pill" href="#ecommerce" role="tab">E-commerce</a>
-          <a class="nav-link" data-bs-toggle="pill" href="#catalogo" role="tab">Catálogo</a>
-          <a class="nav-link" data-bs-toggle="pill" href="#onepage" role="tab">One Page</a>
-          <a class="nav-link" data-bs-toggle="pill" href="#reservas" role="tab">Reservas</a>
-        </div>
-      </div>
+<div class="d-lg-none mb-3" data-aos="fade-up" data-aos-delay="50">
+  <div class="tabs-mobile-sticky">
+    <div id="mobile-tabs" class="nav nav-pills flex-nowrap" role="tablist">
+      <a class="nav-link active" data-bs-toggle="pill" href="#incluido" role="tab">¿Qué incluyen nuestros sitios webs?</a>
+      <a class="nav-link" data-bs-toggle="pill" href="#corporativos" role="tab">Corporativos</a>
+      <a class="nav-link" data-bs-toggle="pill" href="#landing" role="tab">Landing</a>
+      <a class="nav-link" data-bs-toggle="pill" href="#portafolio" role="tab">Portafolios</a>
+      <a class="nav-link" data-bs-toggle="pill" href="#ecommerce" role="tab">E-commerce</a>
+      <a class="nav-link" data-bs-toggle="pill" href="#catalogo" role="tab">Catálogo</a>
+      <a class="nav-link" data-bs-toggle="pill" href="#onepage" role="tab">One Page</a>
+      <a class="nav-link" data-bs-toggle="pill" href="#reservas" role="tab">Reservas</a>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
       <!-- Menú lateral (solo en escritorio) -->
       <div class="col-lg-4 d-none d-lg-block" data-aos="fade-up" data-aos-delay="100">
@@ -152,10 +158,10 @@
 
         <!--Incluído-->
         <div class="tab-pane fade show active" id="incluido">
-          <h3><i class="bi bi-check-circle"></i> ¿Qué incluyen nuestros sitios webs?</h3>
+          <h3><i class="bi bi-check-circle "></i> ¿Qué incluyen nuestros sitios webs?</h3>
           <p class="lead">Todo lo que necesitas para tener una presencia online efectiva.</p>
 
-          <div class="row g-4 text-center mt-4 d-none d-lg-block">
+          <div class="row g-4 text-center mt-4">
           <!-- Diseño personalizado -->
           <div class="col-6 col-md-3">
             <div class="card border-0 shadow-sm h-100">
