--- a/codigo-funcional.html
+++ b/codigo-funcional.html
@@ -113,6 +113,23 @@
   <div class="container">
     <div class="row gy-5">
 
+      <!-- CONTENIDO INCLUIDO SOLO PARA MÓVILES -->
+      <div class="d-lg-none" id="incluido-mobile">
+        <h3><i class="bi bi-check-circle"></i> ¿Qué incluyen nuestros sitios webs?</h3>
+        <p class="lead">Todo lo que necesitas para tener una presencia online efectiva.</p>
+
+        <div class="row g-4 text-center mt-4">
+          <!-- Diseño personalziado -->
+          <div class="col-6">
+            <div class="card border-0 shadow-sm h-100">
+              <div class="card-body">
+                <i class="bi bi-palette-fill display-5 text-primary mb-3"></i>
+                <h6 class="card-title">Diseño personalizado</h6>
+                <p class="card-text small">Adaptado a tu identidad corporativa, colores, logo y estilo.</p>
+              </div>
+            </div>
+          </div>
+
       <!-- Tabs móviles (scroll horizontal) -->
       <div class="d-lg-none mb-3 overflow-auto" data-aos="fade-up" data-aos-delay="50">
         <div class="nav nav-pills flex-nowrap" id="mobile-tabs" role="tablist" style="white-space: nowrap; gap: 10px;">
