--- a/desarrollo-web.html
+++ b/desarrollo-web.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>ACC INNOVATIONS | Diseño y desarrollo web</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Diseñamos y desarrollamos sitios web a la medida en Olmué. Desde páginas corporativas hasta tiendas online, tenemos la solución perfecta para ti.">
+  <meta name="keywords" content="diseño de paginas web en olmue">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -213,7 +213,7 @@
           <div class="service-box">
             <h4>Lo que necesitas saber</h4>
             <div class="services-list nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-              <a class="nav-link" id="corporativos-tab" data-bs-toggle="pill" href="#corporativos" role="tab">
+              <a class="nav-link active" id="corporativos-tab" data-bs-toggle="pill" href="#corporativos" role="tab">
                 <i class="bi bi-buildings me-2"></i>Corporativos o Institucionales
               </a>
               <a class="nav-link" id="landing-tab" data-bs-toggle="pill" href="#landing" role="tab">
@@ -759,7 +759,7 @@
               </div>
         
               <!-- Imagen representativa -->
-              <img src="assets/img/reserva de citas.webp" alt="Ejemplo de sitio con reserva de citas" class="img-fluid rounded-dev mb-5">
+              <img src="assets/img/reserva de citas.webp" alt="Ejemplo de sitio con reserva de citas" class="img-fluid img-fluid citas mx-auto d-block mb-5 citas">
         
               <!-- Dos columnas: ¿quiénes lo necesitan? y ¿qué suele incluir? -->
               <div class="row mb-5">
@@ -826,7 +826,7 @@
           <div class="container">
             <div class="text-center">
               <h3>¿Qué incluyen nuestros sitios webs?</h3>
-              <p class="lead">Haz despegar tu presencia online con una web que lo tiene todo.</p>
+              <p class="lead">Todo lo necesario  para mejorar tu presencia online con una web que lo tiene todo</p>
 
               <div class="row g-5 text-center mt-4">
                 <!-- Diseño personalizado -->
